Coverity analysis defect 152562: Data race condition

XMLWordPrintableJSON

    • Networking & Observability
    • Fully Compatible
    • ALL
    • N&O 2025-08-18
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Data race condition

      The value of the shared data will be determined by the interleaving of thread execution. Thread shared data is accessed without holding an appropriate lock, possibly causing a race condition
      /src/mongo/db/ftdc/controller.cpp:204: MISSING_LOCK 152562 Accessing "this->_state" without holding lock "mongo::FTDCController._mutex". Elsewhere, "mongo::FTDCController._state" is written to with "FTDCController._mutex" held 3 out of 4 times.

            Assignee:
            Amirsaman Memaripour
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: