SERVER-109406 Acquire FTDC controller's mutex before writing to `_state` (#40344)

GitOrigin-RevId: 8c07e06856916b720ec1ec507defcc2c00b57f10